--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Test binary, built with `protogo test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Output of the protogo coverage tool, specifically when used with LiteIDE
 *.out
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+.idea
